--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -5,7 +5,7 @@
     <div class="w-full flex flex-col h-screen justify-center items-center">
         <div class="flex items-end justify-start w-8/12">
             <img class="w-[103px] h-[103px]" src="../static/images/robot.png">
-            <h1 class="text-5xl ml-6 font-extrabold">Hello Vanessa!</h1>
+            <h1 class="text-5xl ml-6 font-extrabold">Hello QA Team!</h1>
         </div>
         <div class="w-8/12 justify-items-center gap-10 grid large grid-cols-2 grid-flow-row mt-20 2xl:grid-cols-1">
             <a class="w-full" href="/applications">
