--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -8,7 +8,7 @@
             <h1 class="text-5xl ml-6 font-extrabold">Hello QA Team!</h1>
         </div>
         <div class="w-8/12 justify-items-center gap-10 grid large grid-cols-2 grid-flow-row mt-20 2xl:grid-cols-1">
-            <a class="w-full" href="/applications">
+            <a class="w-full" href="/applications/Turkey">
                 <div class="h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                     <h2 class="font-semibold text-3xl">Visa Applications</h2>
                     <img class="w-16 h-16" src="../static/images/visa.png">
