--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -20,8 +20,8 @@
                     <img class="w-16 h-16" src="../static/images/guia.png">
                 </div>
             </a>
-            <a class="w-full" href="#">
-                <div class="h-[112px] bg-[#302E2E]/20 rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
+            <a class="w-full" href="/weekly">
+                <div class="h-[112px] rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
                     <h2 class="font-semibold text-3xl">Weekly</h2>
                     <img class="w-16 h-16" src="../static/images/enojado.png">
                 </div>
