--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -21,7 +21,7 @@
                 </div>
             </a>
             <a class="w-full" href="/weekly">
-                <div class="h-[112px] rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
+                <div class="h-[112px] rounded-md bg-white flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
                     <h2 class="font-semibold text-3xl">Weekly</h2>
                     <img class="w-16 h-16" src="../static/images/enojado.png">
                 </div>
