passprt uspr automation

--- a/automations/templates/weekly.html
+++ b/automations/templates/weekly.html
@@ -6,23 +6,178 @@
       {%for automation in automations_list%}
          {%if automation['Enabled']%}
             <div class="w-full flex flex-col justify-evenly cursor-pointer mt-14 p-6 rounded-md bg-white h-fit mb-3 border-[#302E2E] border-2">
-               <h1 class="text-2xl font-bold">{{automation.Title}}</h1>
+               <h1 class="text-2xl font-bold">{{automation.Title.replace('-', ' ')}}</h1>
                <ul class="list-disc">
                   {%for automation in automations_list[0]['Subtitles']%}
                     <li class="my-5 ml-5">{{automation}}</li>
                   {% endfor %}
                </ul>
-               <div class="flex items-center justify-between">
-                 <input 
-                    id="URL"
-                    placeholder="URL"
-                    class="w-3/4 outline-none border-[1px] border-solid border-[#302E2E]/50 font-light h-[40px] px-6 py-5 rounded-lg" 
-                    type="text"
-                    >
-                 <button class="bg-[#4ADE80] w-52 col-start-1 col-end-1 font-semibold rounded-lg h-10">RUN</button>
+               <div class="flex flex-col items-center w-full">
+                  <div class="flex w-full">
+                     <input 
+                     id="URL"
+                     placeholder="URL"
+                     class="w-full outline-none border-[1px] border-solid border-[#302E2E]/50 font-light h-[40px] px-6 py-5 rounded-lg" 
+                     type="text"
+                     >
+                  </div>
+                  <div class="flex w-full mt-3">
+                     <input 
+                     id="Email"
+                     placeholder="Email"
+                     class="w-5/6 outline-none border-[1px] border-solid border-[#302E2E]/50 font-light h-[40px] px-6 py-5 rounded-lg" 
+                     type="text"
+                     >
+                     <button 
+                     onclick="runtest(document.getElementById('URL').value, '{{automation.Title}}', document.getElementById('Email').value)"
+                     class="bg-[#4ADE80] w-1/4 ml-32 font-semibold rounded-lg h-10">
+                     RUN</button>
+                  </div>
                </div>
             </div>
          {% endif %}
       {% endfor %}
    </div>
+   <div id="automation_running" class="hidden bg-[#302E2E]/50 top-0 w-full h-screen">
+      <div class="w-full h-full flex justify-center items-center">
+          <div class="w-4/6 px-11 max-w-[1000px] bg-white h-1/2 max-h-[500px] border-2 border-solid border-[#302E2E] rounded-lg">
+              <div class="flex justify-between items-center h-full">
+                  <div class="flex flex-col w-2/4">
+                      <div class="flex justify-evenly"> 
+                          <h2 class="text-[32px] font-semibold text-center mb-5">Running automations</h2>
+                          <img class="w-12 h-12 animate-spin" src="../static/images/loading.png">
+                      </div>
+                      <p class="text-xl font-medium text-center mb-5">(This is going to take a while so go ahead and make yourself a coffee while you wait)</p>
+                      <p class="text-center">Sometimes the automation finishes but the response takes time to get to us, you can login to the email with this password and check the progress</p>
+                      <ul class="flex justify-evenly mt-4">
+                          <div>
+                              <li class="font-semibold">Email:</li>
+                              <li id="user_email_status"></li>
+                          </div>
+                          <div>
+                              <li class="font-semibold">Password:</li>
+                              <li>testivisa5!</li>
+                          </div>
+                      </ul>
+                  </div>
+                  <div class="w-2/6 max-w-[290px]">
+                      <div class="tenor-gif-embed relative left-2" data-postid="13657985" data-share-method="host" data-aspect-ratio="1" data-width="100%">
+                          <a href="https://tenor.com/view/coffee-cup-of-coffee-drinking-coffee-pusheen-tea-time-gif-13657985">Coffee Cup Of Coffee Sticker</a>
+                      </div>
+                  </div>
+              </div>
+          </div> 
+      </div>
+   </div>
+   <div id="automation_failed" class="hidden bg-[#302E2E]/50 top-0 w-full h-screen">
+      <div class="w-full h-full flex justify-center items-center">
+          <div class="w-fit bg-white h-fit border-2 border-solid border-[#302E2E] rounded-lg">
+              <div class="flex flex-col justify-evenly p-9  items-center h-full">
+                  <h2 class="text-[32px] font-semibold text-center mb-8">There was an error</h2>
+                  <div class="w-full relative h-full">
+                      <h2 
+                      onclick="document.getElementById('automation_failed').classList.add('hidden')"
+                      class="text-[18px] font-semibold cursor-pointer absolute bottom-16 right-0">
+                          X
+                      </h2>
+                  </div>
+                  <div class="flex w-full justify-between items-center">
+                      <div class="w-1/2 ml-12">
+                          <p class="text-xl font-medium text-center">There could be a couple of reasons why:</p>
+                          <ul class="text-base font-normal text-center list-disc" >
+                              <li class="my-4">If no orders where made please check that the URL is correct and is available</li>
+                              <li class="my-4" >Network error: Please try to run the automation again with a different email</li>
+                              <li class="my-4">You used an email that already has an account, please try again with another account</li>
+                          </ul>
+                      </div>
+                      <div class="tenor-gif-embed w-[10px] h-[200px] m-0" data-postid="8085108947907151027" data-share-method="host" data-aspect-ratio="1.04622" data-width="40%">
+                          <a href="https://tenor.com/view/%E3%81%82-gif-8085108947907151027">あ GIF</a>from <a href="https://tenor.com/search/%E3%81%82-gifs">あ GIFs</a>
+                      </div>
+                  </div>      
+                  <div>
+                      <p class="text-center">If nothing of the above works then contact me so i can check if something is wrong</p>
+                  </div>
+              </div>
+          </div> 
+      </div>
+   </div>
+   <div id="automation_results" class="w-9/12 h-fit hidden">
+      <div class="w-full bg-white h-fit flex justify-between px-12 py-8 rounded-xl border-solid border-[#4ADE80] border-2 ">
+          <div class="w-2/6 h-full">
+              <h2 class="text-2xl font-bold">Credentials</h2>
+              <div class="w-full mt-5">
+                  <div class="flex w-full justify-between">
+                      <p class="mb-6">Log in Email:</p>
+                      <p name="user_email"></p>
+                  </div>
+                  <div class="flex w-full justify-between">
+                      <p>Password:</p>
+                      <p>testivisa5!</p>
+                  </div>
+              </div>
+          </div>
+          <div class="flex w-2/5 justify-between">
+              <div name="user_order_type" class="flex flex-col">
+                  <h2 class="text-2xl font-bold mb-5">Automations Ran</h2>
+              </div>
+              <div name="user_order_status">
+                  <h2 class="text-2xl font-bold mb-5">Status</h2>
+              </div>
+          </div>
+      </div>
+  </div>
+   <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+   <script>
+      function runpolling(){
+         automation_started = true
+         pollAutomationStatus()
+     }
+      function runtest(url, automation, email){
+         fetch(`/weekly/${automation}`,{
+            method: 'POST',
+            headers: {'Content-Type':'application/json'},
+            body: JSON.stringify({url: url, email: email})
+        })
+        .then(res => res.json()) 
+        .then(data => console.log(data))
+        document.getElementById('automation_running').classList.remove('hidden')
+        document.getElementById('automation_running').classList.add('absolute')
+        document.getElementById('user_email_status').textContent = email
+        runpolling()
+      }
+      async function pollAutomationStatus(){
+         const response = await fetch(`/check-automation-status`);
+         const json_response = await response.json();
+         console.log(json_response)
+         if (json_response.Status === "Success") {
+            console.log(json_response)
+            document.getElementById('set_variables').classList.add('hidden')
+            document.getElementById('automation_running').classList.add('hidden')
+            document.getElementById('automation_results').classList.remove('hidden')
+            document.getElementById('automation_results').classList.add('content')
+            document.getElementById('main_title').textContent = 'Automation Ran Successfully'
+            document.getElementsByName('user_email')[0].textContent = json_response.email
+            const order_container = document.getElementsByName('user_order_type')[0]
+            const order_status_container = document.getElementsByName('user_order_status')[0]
+            //for(let i = 0; i < json_response.Order_numbers.length; i++){
+            //    const order_title = document.createElement('p')
+            //    const order_status = document.createElement('p')
+            //    order_title.textContent = 'Order Created ' + json_response.Order_numbers[i][0]
+            //    order_title.classList.add('text-center', 'mb-5')
+            //    order_container.append(order_title)
+            //}
+         }else if(json_response.Status === "Failed"){
+             console.log(json_response)
+             console.log('failed')
+             document.getElementById('automation_running').classList.add('hidden')
+             document.getElementById('automation_failed').classList.remove('hidden')
+             document.getElementById('automation_failed').classList.add('absolute')
+         } 
+         else {
+             await new Promise(resolve => setTimeout(resolve, 10000))
+             pollAutomationStatus()
+         }
+      }
+      
+   </script>
 {% endblock %}
