--- a/automations/templates/run_automation.html
+++ b/automations/templates/run_automation.html
@@ -98,7 +98,7 @@
                     <h2 class="text-[32px] font-semibold text-center mb-8">There was an error</h2>
                     <div class="w-full relative h-full">
                         <h2 
-                        onclick="document.getElementById('automation_failed').classList.add('hidden')"
+                        onclick="location.reload()"
                         class="text-[18px] font-semibold cursor-pointer absolute bottom-16 right-0">
                             X
                         </h2>
