--- a/automations/templates/run_automation.html
+++ b/automations/templates/run_automation.html
@@ -83,9 +83,9 @@
                         </ul>
                     </div>
                     <div class="w-2/6 max-w-[290px]">
-                        <div class="tenor-gif-embed relative left-2" data-postid="13657985" data-share-method="host" data-aspect-ratio="1" data-width="100%">
-                            <a href="https://tenor.com/view/coffee-cup-of-coffee-drinking-coffee-pusheen-tea-time-gif-13657985">Coffee Cup Of Coffee Sticker</a>
-                        </div>
+                        <div class="tenor-gif-embed relative left-2" data-postid="7215069890640121360" data-share-method="host" data-aspect-ratio="1" data-width="100%">
+                            <a href="https://tenor.com/view/cat-coffee-xyi-gif-7215069890640121360">Cat Coffee Sticker</a>from <a href="https://tenor.com/search/cat-stickers">Cat Stickers</a>
+                        </div> 
                     </div>
                 </div>
             </div> 
