--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -9,31 +9,31 @@
         </div>
         <div class="w-8/12 justify-items-center gap-10 grid large grid-cols-2 grid-flow-row mt-20 2xl:grid-cols-1">
             <a class="w-full" href="/applications/Turkey">
-                <div class="h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
+                <div class="h-28 bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                     <h2 class="font-semibold text-3xl">Visa Applications</h2>
                     <img class="w-16 h-16" src="../static/images/visa.png">
                 </div>
             </a>
-            <a class="w-full" href="/weekly">
-                <div class="h-[112px] rounded-md bg-white flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
+            <a class="w-full" href="#">
+                <div class="h-28 rounded-md bg-[#302E2E]/20 flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                     <h2 class="font-semibold text-3xl">Weekly</h2>
                     <img class="w-16 h-16" src="../static/images/enojado.png">
                 </div>
             </a>
-            <a class="w-full" href="#">
-                <div class="h-[112px] bg-[#302E2E]/20 rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
+            <a class="w-full" href="/admin">
+                <div class="h-28 bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
                     <h2 class="font-semibold text-3xl">Admin portal</h2>
                     <img class="w-16 h-16" src="../static/images/administracion.png">
                 </div>
             </a>
             <a class="w-full" href="#">
-                <div class=" h-[112px] bg-[#302E2E]/20 rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
+                <div class="h-28  bg-[#302E2E]/20 rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
                     <h2 class="font-semibold text-3xl">Embassy Reg</h2>
                     <img class="w-16 h-16" src="../static/images/embajada.png">
                 </div>
             </a>
             <a class="w-full" href="#">
-                <div class="h-[112px] bg-[#302E2E]/20 rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
+                <div class="h-28  bg-[#302E2E]/20 rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer">
                     <h2 class="font-semibold text-3xl">Passport</h2>
                     <img class="w-16 h-16" src="../static/images/pasaporte.png">
                 </div>
