front end changes for admin automations

--- a/automations/templates/admin.html
+++ b/automations/templates/admin.html
@@ -8,13 +8,16 @@
             <div class="w-full flex flex-col justify-evenly mt-14 p-6 rounded-md bg-white h-fit mb-3 border-[#302E2E] border-2">
                <div class="w-full flex justify-between">
                    <h1 class="text-2xl font-bold">{{automation.Title.replace('-', ' ')}}</h1>
-                    <div class="w-52">
+                    <div class="w-2/5 flex justify-end">
+                        <h1 id="automation_failed" class="text-xl font-semibold hidden ml-7">Ups something went wrong</h1>
                         <button 
                         onclick="runtest(document.getElementById('URL').value, '{{automation.Title}}')"
-                        class="bg-[#4ADE80] w-1/4 flex justify-center items-center ml-32 font-semibold rounded-lg h-10">
+                        id="run_automation"
+                        class="bg-[#4ADE80] w-1/4 flex justify-center items-center font-semibold rounded-lg h-10">
                             <img class="w-6 h-6" id="play_btn" src="../static/images/boton-de-play.png" alt="">
                             <img class="w-6 h-6 hidden" id="pause_btn" src="../static/images/boton-de-pausa.png" alt="">
                         </button>
+                        <h1 id="automation_succeded" class="text-xl font-semibold hidden">Success!</h1>
                     </div>
                </div>
                <ul class="list-disc">
@@ -39,65 +42,6 @@
       {% endfor %}
    </div>
    
-   <div id="automation_failed" class="hidden bg-[#302E2E]/50 top-0 w-full h-screen">
-      <div class="w-full h-full flex justify-center items-center">
-          <div class="w-fit bg-white h-fit border-2 border-solid border-[#302E2E] rounded-lg">
-              <div class="flex flex-col justify-evenly p-9  items-center h-full">
-                  <h2 class="text-[32px] font-semibold text-center mb-8">There was an error</h2>
-                  <div class="w-full relative h-full">
-                      <h2 
-                      onclick="document.getElementById('automation_failed').classList.add('hidden')"
-                      class="text-[18px] font-semibold cursor-pointer absolute bottom-16 right-0">
-                          X
-                      </h2>
-                  </div>
-                  <div class="flex w-full justify-between items-center">
-                      <div class="w-1/2 ml-12">
-                          <p class="text-xl font-medium text-center">There could be a couple of reasons why:</p>
-                          <ul class="text-base font-normal text-center list-disc" >
-                              <li class="my-4">If no orders where made please check that the URL is correct and is available</li>
-                              <li class="my-4" >Network error: Please try to run the automation again with a different email</li>
-                              <li class="my-4">You used an email that already has an account, please try again with another account</li>
-                          </ul>
-                      </div>
-                      <div class="tenor-gif-embed w-[10px] h-[200px] m-0" data-postid="8085108947907151027" data-share-method="host" data-aspect-ratio="1.04622" data-width="40%">
-                          <a href="https://tenor.com/view/%E3%81%82-gif-8085108947907151027">あ GIF</a>from <a href="https://tenor.com/search/%E3%81%82-gifs">あ GIFs</a>
-                      </div>
-                  </div>      
-                  <div>
-                      <p class="text-center">If nothing of the above works then contact me so i can check if something is wrong</p>
-                  </div>
-              </div>
-          </div> 
-      </div>
-   </div>
-   <div id="automation_results" class="w-full bg-[#302E2E]/50 absolute h-screen top-0 hidden">
-        <div class="w-full h-full flex justify-center items-center">
-            <div class="w-5/6 bg-white h-fit flex flex-col justify-between px-12 py-14 rounded-xl border-solid border-[#4ADE80] border-2 ">
-                <div class="flex justify-between">
-                    <h1 class="text-5xl w-full mb-8 font-bold">Automation ran Successfully</h1> 
-                    <h2 class="font-bold text-xl cursor-pointer" onclick="location.reload()">X</h2>
-                </div>
-                <div class="flex">
-                  <div class="w-4/6 h-full">
-                      <h2 class="text-2xl font-bold">Credentials</h2>
-                      <div class="w-4/6 mt-5">
-                          <div class="flex w-full justify-between">
-                              <p class="mb-6">Log in Email:</p>
-                              <p name="user_email"></p>
-                          </div>
-                          <div class="flex w-full justify-between">
-                              <p>Password:</p>
-                              <p>testivisa5!</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div name="user_order_type" class="w-2/5 flex flex-col items-center justify-center">
-                        <h2 class="text-2xl font-bold mb-5">Automations Ran</h2>
-                  </div>
-            </div>
-        </div>
-    </div>
    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
    <script>
       function runpolling(){
@@ -108,7 +52,7 @@
         document.getElementById('play_btn').classList.add('hidden')
         document.getElementById('pause_btn').classList.add('flex')
         document.getElementById('pause_btn').classList.remove('hidden')
-         fetch(`/admin/${automation}`,{
+        fetch(`/admin/${automation}`,{
             method: 'POST',
             headers: {'Content-Type':'application/json'},
             body: JSON.stringify({url: url})
@@ -121,24 +65,12 @@
          const response = await fetch(`/check-automation-status`);
          const json_response = await response.json();
          if (json_response.Status === "Success") {
+            document.getElementById('automation_succeded').classList.remove('hidden')
+            document.getElementById('run_automation').classList.add('hidden')
+        }else if(json_response.Status === "Failed"){
             console.log(json_response)
-            document.getElementById('automation_results').classList.remove('hidden')
-            document.getElementById('automation_results').classList.add('absolute')
-            document.getElementsByName('user_email')[0].textContent = json_response.email
-            const order_container = document.getElementsByName('user_order_type')[0]
-            const order_status_container = document.getElementsByName('user_order_status')[0]
-            for(let i = 0; i < json_response.Order_numbers.length; i++){
-                const order_title = document.createElement('p')
-                const order_status = document.createElement('p')
-                order_title.textContent = 'Order Created ' + json_response.Order_numbers[i][0]
-                order_title.classList.add('text-center', 'mb-5')
-                order_container.append(order_title)
-            }
-         }else if(json_response.Status === "Failed"){
-             console.log(json_response)
-             console.log('failed')
-             document.getElementById('automation_failed').classList.remove('hidden')
-             document.getElementById('automation_failed').classList.add('absolute')
+            document.getElementById('automation_failed').classList.remove('hidden')
+            document.getElementById('run_automation').classList.add('hidden')
          } 
          else {
              await new Promise(resolve => setTimeout(resolve, 10000))
